plugins {
	id 'java'
}

repositories {
	mavenCentral()
	maven { url 'https://s01.oss.sonatype.org/content/repositories/snapshots' }
}

ext {
	junitJupiterVersion = '5.9.2'
	jqwikVersion = '1.7.3'
	assertJVersion = '3.24.1'
}

java {
	sourceCompatibility = JavaVersion.VERSION_17
	targetCompatibility = JavaVersion.VERSION_17
}

compileTestJava {
	options.compilerArgs += '-parameters'
	options.encoding = 'UTF-8'
}

test {
	useJUnitPlatform()

	include '**/*Properties.class'
	include '**/*Test.class'
	include '**/*Tests.class'
	// include '**/*Examples.class'

	// testLogging.events = ["passed", "failed", "skipped"]
	// testLogging.showStandardStreams = true
}

dependencies {
	testImplementation("net.jqwik:jqwik:${jqwikVersion}")

	// Fluent assertions library
	testImplementation("org.assertj:assertj-core:${assertJVersion}")

	// For Jupiter tests and also necessary to work around some IntelliJ bugs
	testImplementation("org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}")

	// For oracle tests in solution 3
	testImplementation('org.apache.commons:commons-csv:1.10.0')

}

wrapper {
	gradleVersion = '8.0.2'
}
